# sandboxctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  conventional-pr.yml  pip-audit.yml  release.yml  scorecard.yml
docs/: contributing.md  getting-started.md  index.md
docs/commands/: config.md  create.md  delete.md  doctor.md  index.md  init.md  list.md  open.md  restart.md  setup.md  status.md  upgrade.md  validate.md
docs/configuration/: credentials.md  index.md  profiles.md
examples/containerfiles/: Containerfile
examples/policies/: policy.yaml
examples/profiles/: ai-dev.toml  dev.toml  minimal.toml
src/sandboxctl/: __init__.py  bundled_profiles.py  cli.py  config.py  context.py  create.py  credentials.py  doctor.py  health.py  http_utils.py  models.py  open_cmd.py  openshell.py  profile.py  scoped_tokens.py  setup_cmd.py
tests/: test_cli.py  test_config.py  test_context.py  test_create.py  test_credentials.py  test_doctor.py  test_health.py  test_http_utils.py  test_models.py  test_open_cmd.py  test_openshell.py  test_profile.py  test_scoped_tokens.py  test_setup.py
